--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ header figure {
 }
 
 .header-divider {
-
+ width: 100%;
 }
 
 header nav {
@@ -122,12 +122,13 @@ header nav {
 header nav ul {
   display: flex;
   justify-content: center;
-  width: 20%;
+  width: 45%;
 } 
 
 footer .content-wrapper {
   width: 55%;
   margin: 50px 0;
+  width: 80%;
 }
 
 address {
@@ -171,7 +172,7 @@ main {
 }
 
 .content-wrapper {
-  width: 80%;
+  width: 90%;
 }
 
 
@@ -213,6 +214,10 @@ aside {
   flex-flow: row wrap;
 }
 
+.features article {
+  width: 55%;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
@@ -236,6 +241,10 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+.reviews h3 {
+  width: 50%;
 }
 
 
