--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ header .content-wrapper {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-
+  margin: 0;
 }
 
 header figure {
@@ -129,6 +129,10 @@ footer .content-wrapper {
   width: 55%;
   margin: 50px 0;
   width: 80%;
+}
+
+footer p {
+  margin: 0;
 }
 
 address {
@@ -212,6 +216,10 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+.features p {
+  margin: 0;
 }
 
 .features article {
