--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,11 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
 /* ----------  Base Header - Footer Styles ----------------- */
 
 header,
@@ -97,24 +102,29 @@ footer {
   flex-flow: row wrap;
 }
 
+header { 
+  padding: 15px 0;
+}
+
 header .content-wrapper {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
   margin: 0;
 }
 
-header figure {
-  
-}
-
 .header-divider {
  width: 100%;
+ height: 1px;
+ margin: 10px 0 20px 0;
+
 }
 
 header nav {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   flex-flow: row wrap;
   width: 60%;
 }
@@ -122,65 +132,46 @@ header nav {
 header nav ul {
   display: flex;
   justify-content: center;
-  width: 45%;
+  width: 100%;
 } 
 
-footer .content-wrapper {
-  width: 55%;
-  margin: 50px 0;
-  width: 80%;
+footer {
+  flex-direction: column;
 }
 
 footer p {
   margin: 0;
 }
 
-address {
-
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
 }
 
 .footer-content {
-
-}
-
-.contact {
-
-}
-
-
-footer .social {
-  display: flex;
-  justify-content: center;
+  margin-bottom: 50px;
 }
 
 footer .social-icons {
   display: flex;
   justify-content: center;
-
+  align-items: center;
 }
 
-.copyright {
-  
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .copyright {
+  margin: 20px 0;
 }
 
 /* ----------  Mobile Styles ----------------- */
 
 
-/* Main Section Styles */
-
-main {
-  display: flex;
-  justify-content: center;
-  flex-flow: column;
-
-}
-
-.content-wrapper {
-  width: 90%;
-}
-
-
-/* Hero-area Section Styles */
+/* Hero Area */
 
 .hero-area {
   display: flex;
@@ -188,29 +179,18 @@ main {
   flex-flow: row wrap;
 }
 
-section .content-wrapper {
 
-}
-
-.hero-img {
-
-}
-
-/* Aside Section Styles */
+/* Aside */
 
 aside {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
 }
 
 
-/* Form Section Styles */
-
-
-
-
-/* Features Section Styles */
+/* Features */
 
 .features {
   display: flex;
@@ -218,30 +198,27 @@ aside {
   flex-flow: row wrap;
 }
 
-.features p {
-  margin: 0;
+.features h2 {
+  margin-bottom: 60px;
 }
 
 .features article {
   width: 55%;
+  margin: 30px 0;
 }
 
 .features .features-items {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
 }
 
 
-
-.fontawesome-icon {
-
+.features p {
+  margin: 0;
 }
 
-.features .features-item-description {
-  display: flex;
-  align-items: center;
-}
 
 /* Reviews Section Styles */
 
@@ -251,8 +228,13 @@ aside {
   flex-flow: row wrap;
 }
 
+.reviews {
+  margin-bottom: 40px;
+}
+
 .reviews h3 {
-  width: 50%;
+  width: 55%;
+  margin: 20px 0;
 }
 
 
@@ -261,13 +243,19 @@ aside {
 .mission {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
 }
 
 .contact-section {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
+}
+
+.contact-content p {
+  margin: 0;
 }
 
 /* FAQ Page Mobile Styles */
@@ -275,17 +263,25 @@ aside {
 .faq {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
 }
 
 .faq .content-wrapper {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
+  margin: 50px 0 0 0;
 }
 
+.faq h2 {
+  margin-bottom: 40px;
+}
 
-
+.faq-content {
+  margin-bottom: 50px;
+}
 
 
 /* ==========================================================================
