--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,48 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* General styles */
+
+html {
+
+}
+
+body {
+
+}
+
+ul,ol {
+
+}
+
+a {
+
+}
+
+h2 {
+
+}
+
+h3, 
+h4 {
+
+}
+
+p {
+
+}
+
+img {
+
+}
+
+figure {
+
+}
+
+address {
+  
+}
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
