--- a/css/main.css
+++ b/css/main.css
@@ -90,32 +90,37 @@ textarea {
 /* General styles */
 
 html {
-
+  font-size: 16px;
+  color: #e2e3ed;
 }
 
 body {
   font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
 }
 
-ul,ol {
-
+ul {
+  list-style-type: none;
 }
 
 a {
-
+  color: #e2e3ed;
+  text-decoration: none;
 }
 
 h2 {
-
+  font-family: 'Poppins' sans-serif;
+  font-size: 1.87em;
 }
 
 h3, 
 h4 {
-
+  font-family: 'Poppins' sans-serif;
+  font-size: 1.13em;
 }
 
 p {
-
+  
 }
 
 img {
@@ -126,8 +131,9 @@ figure {
 
 }
 
-address {
-  
+address { 
+  font-style: italic;
+  font-size: .88em;
 }
 .content-wrapper {
   width: 90%;
