Added styles to css

--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,8 @@ address {
   margin: 50px 0;
 }
 
+
+
 /* ----------  Base Header - Footer Styles ----------------- */
 
 header,
@@ -235,6 +237,58 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+aside .form {
+  margin-top: 30px;
+}
+ 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 
